MZ-7 add Admin/CategoriesControllers add feature

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Areas\admin\Controllers\ReportsController.cs" />
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
+    <Compile Include="Areas\admin\Models\Categories\AddViewModel.cs" />
     <Compile Include="Core\Configuration\AddressPartialResolver.cs" />
     <Compile Include="Core\Configuration\RouteInfo.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -389,6 +390,7 @@
     <Content Include="Areas\admin\Views\Settings\EditEmailTemplate.cshtml" />
     <Content Include="Areas\admin\Views\Docs\Index.cshtml" />
     <Content Include="Areas\admin\Views\Docs\Item.cshtml" />
+    <Content Include="Areas\admin\Views\Categories\Add.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
@@ -463,7 +465,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\admin\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
