--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="EPPlus" version="4.0.3" targetFramework="net451" />
   <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
+  <package id="Humanizer" version="1.33.7" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
