--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\admin\Models\Categories\AddViewModel.cs" />
+    <Compile Include="Areas\admin\Models\Categories\EditViewModel.cs" />
     <Compile Include="Core\Configuration\AddressPartialResolver.cs" />
     <Compile Include="Core\Configuration\RouteInfo.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -391,6 +392,7 @@
     <Content Include="Areas\admin\Views\Docs\Index.cshtml" />
     <Content Include="Areas\admin\Views\Docs\Item.cshtml" />
     <Content Include="Areas\admin\Views\Categories\Add.cshtml" />
+    <Content Include="Areas\admin\Views\Categories\Edit.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
