MZ-7 added Category.Slug (to model only, will update UI later)

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -89,6 +89,10 @@
     <Compile Include="Migrations\201502191037455_AddCategory.Designer.cs">
       <DependentUpon>201502191037455_AddCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502221140450_AddCategorySlug.cs" />
+    <Compile Include="Migrations\201502221140450_AddCategorySlug.Designer.cs">
+      <DependentUpon>201502221140450_AddCategorySlug.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -120,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502191037455_AddCategory.resx">
       <DependentUpon>201502191037455_AddCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502221140450_AddCategorySlug.resx">
+      <DependentUpon>201502221140450_AddCategorySlug.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
