added xlxs mime map; added Id to user Excel export

--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -57,6 +57,8 @@
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
       <remove fileExtension=".svg" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <remove fileExtension=".xlxs" />
+      <mimeMap fileExtension=".xlxs" mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
     </staticContent>
     <httpProtocol>
       <customHeaders>
