MZ-18 Add Entity Auction With DB Migration.

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -97,6 +97,10 @@
     <Compile Include="Migrations\201502221814578_AddProductAndProductImage.Designer.cs">
       <DependentUpon>201502221814578_AddProductAndProductImage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502271214244_AddAuction.cs" />
+    <Compile Include="Migrations\201502271214244_AddAuction.Designer.cs">
+      <DependentUpon>201502271214244_AddAuction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502221814578_AddProductAndProductImage.resx">
       <DependentUpon>201502221814578_AddProductAndProductImage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502271214244_AddAuction.resx">
+      <DependentUpon>201502271214244_AddAuction.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
