--- a/src/Mzayad.Web/Web.Release.config
+++ b/src/Mzayad.Web/Web.Release.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--<system.web>
+  <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <customErrors mode="On" xdt:Transform="Replace" />
   </system.web>
@@ -11,5 +11,5 @@
       <remove statusCode="500"/>
       <error statusCode="500" path="500.html" responseMode="File"/>
     </httpErrors>
-  </system.webServer>-->
+  </system.webServer>
 </configuration>
