--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -31,6 +31,9 @@
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
     <globalization culture="auto" uiCulture="auto" enableClientBasedCulture="true" />
+    <httpModules>
+      <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule" />
+    </httpModules>
   </system.web>
   <!-- ReSharper disable WebConfig.WebConfigPathWarning -->
   <location path="Admin">
@@ -51,6 +54,7 @@
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule" />
     </modules>
     <staticContent>
       <remove fileExtension=".woff" />
@@ -65,6 +69,7 @@
         <remove name="X-Powered-By" />
       </customHeaders>
     </httpProtocol>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
