--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -25,6 +25,10 @@
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
