MZ-18 MZ-20 create an ~/admin/auctions page with a Kendo UI grid. Add a search that searches the auctions's product's name. Add a Download to Excel link. enable the Auctions link on the admin menu and move it up between Users and Products.

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\admin\Models\Auction\CreateModelView.cs" />
+    <Compile Include="Areas\admin\Models\Auction\IndexViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\EditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\IndexViewModel.cs" />
