--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\admin\Models\Auction\CreateModelView.cs" />
+    <Compile Include="Areas\admin\Models\Auction\EditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Auction\IndexViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\EditViewModel.cs" />
@@ -433,6 +434,7 @@
     <Content Include="Content\image-uploader.less" />
     <Content Include="Areas\admin\Views\Auctions\SelectProduct.cshtml" />
     <Content Include="Areas\admin\Views\Auctions\Create.cshtml" />
+    <Content Include="Areas\admin\Views\Auctions\Edit.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
