--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -218,9 +218,8 @@
     <Compile Include="Areas\admin\Controllers\ReportsController.cs" />
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
-    <Compile Include="Areas\admin\Models\Auction\CreateModelView.cs" />
-    <Compile Include="Areas\admin\Models\Auction\EditViewModel.cs" />
-    <Compile Include="Areas\admin\Models\Auction\IndexViewModel.cs" />
+    <Compile Include="Areas\admin\Models\Auctions\AddEditViewModel.cs" />
+    <Compile Include="Areas\admin\Models\Auctions\IndexViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\EditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\IndexViewModel.cs" />
@@ -435,6 +434,7 @@
     <Content Include="Areas\admin\Views\Auctions\SelectProduct.cshtml" />
     <Content Include="Areas\admin\Views\Auctions\Create.cshtml" />
     <Content Include="Areas\admin\Views\Auctions\Edit.cshtml" />
+    <Content Include="Areas\admin\Views\Auctions\_AddEditAuction.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
