MZ-24 Fix changeCountry() method in ~/scripts/address.js to capture their input before we change the country and then apply it back afterwards

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -486,6 +486,9 @@
     <Content Include="Fonts\FontAwesome.otf" />
     <None Include="Content\variables.less" />
     <None Include="Properties\PublishProfiles\Mzayad.pubxml" />
+    <Content Include="Scripts\address.min.js.map">
+      <DependentUpon>address.js</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\address.js" />
     <Content Include="Scripts\bootstrap.js" />
