--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -109,6 +109,10 @@
     <Compile Include="Migrations\201503011024088_SetBuyNowEnabledToNotNullable.Designer.cs">
       <DependentUpon>201503011024088_SetBuyNowEnabledToNotNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503050717507_AddCreatedByUserId_Product_Auction.cs" />
+    <Compile Include="Migrations\201503050717507_AddCreatedByUserId_Product_Auction.Designer.cs">
+      <DependentUpon>201503050717507_AddCreatedByUserId_Product_Auction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -155,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503011024088_SetBuyNowEnabledToNotNullable.resx">
       <DependentUpon>201503011024088_SetBuyNowEnabledToNotNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503050717507_AddCreatedByUserId_Product_Auction.resx">
+      <DependentUpon>201503050717507_AddCreatedByUserId_Product_Auction.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
