--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -71,7 +71,9 @@
     <Compile Include="ModelBase.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductImage.cs" />
+    <Compile Include="ProductSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
