--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Areas\admin\Controllers\ProductsController.cs" />
     <Compile Include="Areas\admin\Controllers\ReportsController.cs" />
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
+    <Compile Include="Areas\admin\Controllers\SpecificationsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\admin\Models\Auctions\AddEditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Auctions\IndexViewModel.cs" />
@@ -475,6 +476,8 @@
     <Content Include="Areas\admin\Views\Auctions\_AddEditAuction.cshtml" />
     <Content Include="ApplicationInsights.config" />
     <Content Include="Areas\Api\Views\web.config" />
+    <Content Include="Areas\admin\Views\Specifications\Index.cshtml" />
+    <Content Include="Areas\admin\Views\Specifications\Add.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
